Clear the pending exception before calling the exception object's toString so that scripted toStrings actually have a chance to run. Patch from a-higuti@gray.plala.or.jp with minor tweaks from me, bug 350650, r=brendan